--- a/gridtimeline.html
+++ b/gridtimeline.html
@@ -22,57 +22,6 @@
         Words
       </div>
       <div class="js-grid-timeline grid-timeline">
-          <div class="booth-grid">
-          <div class="akash-tier">
-            <div class="akash-cell">1</div>
-          </div>
-          <div class="agni-tier flex-display">
-            <div class="agni-cell">2</div>
-            <div class="agni-cell">3</div>
-          </div>
-          <div class="vayu-tier flex-display">
-            <div class="vayu-cell">4</div>
-            <div class="vayu-cell">5</div>
-            <div class="vayu-cell">5</div>
-            <div class="vayu-cell">6</div>
-          </div>
-          <div class="jal-tier flex-display">
-            <div class="jal-cell">7</div>
-            <div class="jal-cell">8</div>
-            <div class="jal-cell">9</div>
-            <div class="jal-cell">10</div>
-            <div class="jal-cell">11</div>
-            <div class="jal-cell">12</div>
-            <div class="jal-cell">13</div>
-            <div class="jal-cell">14</div>
-          </div>
-          <div class="prithvi-tier flex-display">
-            <div class="prithvi-cell">10</div>
-            <div class="prithvi-cell">16</div>
-            <div class="prithvi-cell">17</div>
-            <div class="prithvi-cell">10</div>
-            <div class="prithvi-cell">11</div>
-            <div class="prithvi-cell">12</div>
-            <div class="prithvi-cell">13</div>
-            <div class="prithvi-cell">14</div>
-            <div class="prithvi-cell">7</div>
-            <div class="prithvi-cell">8</div>
-            <div class="prithvi-cell">9</div>
-            <div class="prithvi-cell">10</div>
-            <div class="prithvi-cell">11</div>
-            <div class="prithvi-cell">12</div>
-            <div class="prithvi-cell">13</div>
-            <div class="prithvi-cell">14</div>
-            <div class="prithvi-cell">7</div>
-            <div class="prithvi-cell">8</div>
-            <div class="prithvi-cell">9</div>
-            <div class="prithvi-cell">10</div>
-            <div class="prithvi-cell">11</div>
-            <div class="prithvi-cell">12</div>
-            <div class="prithvi-cell">13</div>
-            <div class="prithvi-cell">14</div>
-          </div>
-        </div>
       </div>
       
       <div class="adjust-akshar-timeline js-akshar-timeline">
@@ -82,9 +31,10 @@
     
   </div>
 
-  <script src="/scripts/aksharTimeline.js"></script>
+  <script src="/scripts/aksharTimeline.js" type="module"></script>
   <script src="/scripts/renderAkshars.js" type="module"></script>
-  <script src="/scripts/renderBoothGrids.js"></script>
+  <script src="/scripts/renderBoothGrids.js" type="module"></script>
+  <script src="/scripts/main.js" type="module"></script>
   
 </body>
 </html>
