added sound to each cell

--- a/gridtimeline.html
+++ b/gridtimeline.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="/styles/gridtimeline.css">
+  <link rel="stylesheet" href="/styles/recordAudio.css">
 </head>
 <body>
+  <div class="record-audio-container">
+    UPload section
+    <audio src="/audioFiles/anjalichunk3.wav" class="js-audio-file" controls></audio>
+  </div>
   <div class="js-askhar-editor akshar-editor">
     <div class="tier-label-container">
       <p>Word</p>
@@ -31,7 +36,6 @@
     
   </div>
 
-  <script src="/scripts/aksharTimeline.js" type="module"></script>
   <script src="/scripts/renderAkshars.js" type="module"></script>
   <script src="/scripts/renderBoothGrids.js" type="module"></script>
   <script src="/scripts/main.js" type="module"></script>
