send video to backend and display the wav audio recieved from backend

--- a/gridtimeline.html
+++ b/gridtimeline.html
@@ -35,6 +35,7 @@
     </div>
 
   </div>
+  <div class="js-audio-container audio-container"></div>
   <div class="js-askhar-editor akshar-editor">
     <div class="tier-label-container">
       <p>Word</p>
