get cell data on click

--- a/gridtimeline.html
+++ b/gridtimeline.html
@@ -35,6 +35,7 @@
     </div>
 
   </div>
+  <p class="note">(Note: After submitting please wait for the response. Do not refresh)</p>
   <div class="js-audio-container audio-container"></div>
   <div class="js-askhar-editor akshar-editor">
     <div class="tier-label-container">
