added a senddata button, and created ready to send payload

--- a/gridtimeline.html
+++ b/gridtimeline.html
@@ -60,6 +60,7 @@
     </div>
     
   </div>
+  <button class="submit-data js-submit-data">Submit</button>
 
   <script src="/scripts/main.js" type="module"></script>
   <script src="/scripts/renderAkshars.js" type="module"></script>
