created the audio preview structure

--- a/gridtimeline.html
+++ b/gridtimeline.html
@@ -36,7 +36,16 @@
 
   </div>
   <p class="note">(Note: After submitting please wait for the response. Do not refresh)</p>
-  <div class="js-audio-container audio-container"></div>
+  <div class="js-audio-files-container audio-files-container">
+    <div class="js-audio-container audio-container">
+      <audio src="./audioFiles/anjalichunk3.wav" controls class="audio-file"></audio>
+      <button class="predict-button">Predict</button>
+      <div class="predicted-text-box" contenteditable="true">Predicted Text</div>
+      <button class="lock-text-button">Lock</button>
+      <button class="generate-button">Generate</button>
+    </div>
+  </div>
+  
   <div class="js-askhar-editor akshar-editor">
     <div class="tier-label-container">
       <p>Word</p>
