aligned submit button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
     </div>
     
   </div>
-  <button class="submit-data js-submit-data">Submit</button>
+  <div class="submit-button-container">
+    <button class="submit-data js-submit-data">Submit</button>
+  </div>
+  
 
   <script src="/scripts/main.js" type="module"></script>
   <script src="/scripts/renderAkshars.js" type="module"></script>
