removed labels and add speed control buttons

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
   </div>
   <p class="note">(Note: After submitting please wait for the response. Do not refresh)</p>
+  <div class="speed-buttons-container">
+    <button class="audio-speed-button js-audio-speed-button" data-speed="0.25">4x slower</button>
+    <button class="audio-speed-button js-audio-speed-button" data-speed="0.125">8x slower</button>
+    <button class="audio-speed-button js-audio-speed-button" data-speed="0.0625">16x slower</button>
+  </div>
   <div class="js-audio-files-container audio-files-container">
   </div>
   
@@ -50,8 +55,7 @@
       <p>Adjust Akshar</p>
     </div>
     <div class="js-timeline timeline">
-      <div class="word-tier">
-      </div>
+
       <div class="js-grid-timeline grid-timeline">
       </div>
       
