added submit response message

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     </div>
 
   </div>
-  <p class="note">(Note: After submitting please wait for the response. Do not refresh)</p>
+  <p class="note submit-file-message js-submit-file-message">(Note: After submitting please wait for the response. Do not refresh)</p>
+
+  </p>
   <div class="speed-buttons-container">
     <button class="audio-speed-button js-audio-speed-button" data-speed="0.25">4x slower</button>
     <button class="audio-speed-button js-audio-speed-button" data-speed="0.125">8x slower</button>
@@ -45,20 +47,10 @@
   </div>
   
   <div class="js-askhar-editor akshar-editor">
-    <div class="tier-label-container">
-      <p>Word</p>
-      <p>Akash (216ms)</p>
-      <p>Agni (108ms)</p>
-      <p>Vayu (54 ms)</p>
-      <p>Jal(27ms)</p>
-      <p>Privthvi (9ms)</p>
-      <p>Adjust Akshar</p>
-    </div>
+    <p class="rendered-filename js-rendered-filename">filename</p>
     <div class="js-timeline timeline">
-
       <div class="js-grid-timeline grid-timeline">
       </div>
-      
       <div class="adjust-akshar-timeline js-akshar-timeline">
       </div>
 
