added drag and drop letters

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
   <link rel="stylesheet" href="/styles/gridtimeline.css">
   <link rel="stylesheet" href="/styles/recorder.css">
+  <link rel="stylesheet" href="/styles/dragLetters.css">
+  <link rel="stylesheet" href="/styles/aksharcolors.css">
 </head>
 <body>
   <div class="recorder-container">
@@ -45,9 +47,12 @@
   </div>
   <div class="js-audio-files-container audio-files-container">
   </div>
+
+
   
   <div class="js-askhar-editor akshar-editor">
     <p class="rendered-filename js-rendered-filename">filename</p>
+    <div class="letters-container" id="lettersContainer"></div>
     <div class="js-timeline timeline">
       <div class="js-grid-timeline grid-timeline">
       </div>
