added a delete region for letterblocks

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <div class="js-askhar-editor akshar-editor">
     <p class="rendered-filename js-rendered-filename">filename</p>
     <div class="letters-container" id="lettersContainer"></div>
+    <div class="delete-region js-delete-region">Drop here to delete</div>
     <div class="js-timeline timeline">
       <div class="js-grid-timeline grid-timeline">
       </div>
