added navigation buttons, made timeline cleaner

--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
   <link rel="stylesheet" href="/styles/recorder.css">
   <link rel="stylesheet" href="/styles/dragLetters.css">
   <link rel="stylesheet" href="/styles/aksharcolors.css">
+  <link rel="stylesheet" href="/styles/navigationBar.css">
 </head>
 <body>
+  <div class="navigation-bar">
+    <div class="record-page-button active-page-button">
+      Record
+    </div>
+    <div class="annotate-page-button">
+      Annotate
+    </div>
+  </div>
   <div class="recorder-container">
 
   <!-- AUDIO -->
