added submit data response message

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       </div>
     </div>
   </div>
+  <div class="submit-data-response js-submit-data-response"></div>
   <div class="submit-button-container">
     <button class="submit-data js-submit-data">Submit</button>
   </div>
