added navigation between pages

--- a/index.html
+++ b/index.html
@@ -46,34 +46,38 @@
     </div>
 
   </div>
-  <p class="note submit-file-message js-submit-file-message">(Note: After submitting please wait for the response. Do not refresh)</p>
+  <section class="record-section">
+    
+  </section>
+  <section class="annotate-section">
+      <p class="note submit-file-message js-submit-file-message">
+      (Note: After submitting please wait for the response. Do not refresh)
+    </p>
+    <div class="speed-buttons-container">
+      <button class="audio-speed-button js-audio-speed-button" data-speed="0.25">4x slower</button>
+      <button class="audio-speed-button js-audio-speed-button" data-speed="0.125">8x slower</button>
+      <button class="audio-speed-button js-audio-speed-button" data-speed="0.0625">16x slower</button>
+    </div>
+    <div class="js-audio-files-container audio-files-container">
+    </div>
 
-  </p>
-  <div class="speed-buttons-container">
-    <button class="audio-speed-button js-audio-speed-button" data-speed="0.25">4x slower</button>
-    <button class="audio-speed-button js-audio-speed-button" data-speed="0.125">8x slower</button>
-    <button class="audio-speed-button js-audio-speed-button" data-speed="0.0625">16x slower</button>
-  </div>
-  <div class="js-audio-files-container audio-files-container">
-  </div>
-
-
-  
-  <div class="js-askhar-editor akshar-editor">
-    <p class="rendered-filename js-rendered-filename">filename</p>
-    <div class="letters-container" id="lettersContainer"></div>
-    <div class="delete-region js-delete-region">Drop here to delete</div>
-    <div class="js-timeline timeline">
-      <div class="js-grid-timeline grid-timeline">
-      </div>
-      <div class="adjust-akshar-timeline js-akshar-timeline">
+    <div class="js-askhar-editor akshar-editor">
+      <p class="rendered-filename js-rendered-filename">filename</p>
+      <div class="letters-container" id="lettersContainer"></div>
+      <div class="delete-region js-delete-region">Drop here to delete</div>
+      <div class="js-timeline timeline">
+        <div class="js-grid-timeline grid-timeline">
+        </div>
+        <div class="adjust-akshar-timeline js-akshar-timeline">
+        </div>
       </div>
     </div>
-  </div>
-  <div class="submit-data-response js-submit-data-response"></div>
-  <div class="submit-button-container">
-    <button class="submit-data js-submit-data">Submit</button>
-  </div>
+    <div class="submit-data-response js-submit-data-response"></div>
+    <div class="submit-button-container">
+      <button class="submit-data js-submit-data">Submit</button>
+    </div>
+
+  </section>
   
 
   <script src="/scripts/main.js" type="module"></script>
