fixed videotimer issue

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <button class="record-btn-1">Record</button><br />
       <button class="stop-btn-1" disabled>Stop</button>
 
-      <div class="timer-1">00:00</div>
+      <div class="timer-1" id="videoTimer-1">00:00</div>
       <div></div>
       <button class="submit-video-button-1 js-submit-video-button-1">Submit</button>
     </div>
