--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <button class="stop-btn-1" disabled>Stop</button>
 
       <div class="timer-1" id="videoTimer-1">00:00</div>
-      <div></div>
+      <div id="videoPreview-1" class="video-preview"></div>
       <button class="submit-video-button-1 js-submit-video-button-1">Submit</button>
     </div>
 
