added selected style to filters

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <section id="filesSection">
     <div class="files-header">
       <div class="filters">
-        <button>All files</button>
+        <button class="filter-selected">All files</button>
         <button>Saved</button>
         <button>Not saved</button>
         <button>Audio records</button>
