added user account profile

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="/styles/navigationBar.css">
   <link rel="stylesheet" href="/styles/recorderPage.css">
   <link rel="stylesheet" href="/styles/loginPage.css">
+  <link rel="stylesheet" href="/styles/account.css">
 </head>
 <body>
   <section class="login-page">
@@ -69,6 +70,13 @@
     </div>
 
   </section>
+  <div class="profile-details">
+    <div class="profile-picture-container">
+      <img src="" alt="" class="profile-picture">
+    </div>
+    
+    <p class="username">Username</p>
+  </div>
 
   <div class="navigation-bar">
     <div class="record-page-button active-page-button">
