created a function to control default page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </div>
 
   <div class="navigation-bar">
-    <div class="record-page-button active-page-button">
+    <div class="record-page-button">
       Record
     </div>
     <div class="annotate-page-button">
@@ -181,8 +181,13 @@
       <button class="submit-video-button js-submit-video-button">Submit</button>
     </div>
 
-  </div>
-      <p class="note submit-file-message js-submit-file-message">
+    </div>
+
+    <div class="load-files-container">
+
+    </div>
+
+    <p class="note submit-file-message js-submit-file-message">
       (Note: After submitting please wait for the response. Do not refresh)
     </p>
     <div class="speed-buttons-container">
