got users info and display users in the drop down

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="load-files-header">
         <div class="load-filters">
           <!-- Account dropdown -->
-          <select class="load-select">
+          <select class="load-select js-account-select">
             <option value="user1">Aarav Sharma</option>
             <option value="user2">Neha Verma</option>
             <option value="user3">Rohit Patel</option>
