--- a/index.html
+++ b/index.html
@@ -183,20 +183,16 @@
     </div>
 
     </div>
+     <p class="note submit-file-message js-submit-file-message">
+      (Note: After submitting please wait for the response. Do not refresh)
+    </p>
 
     <div class="load-files-container">
       <div class="load-files-header">
         <div class="load-filters">
-          <!-- Account dropdown -->
-          <select class="load-select js-account-select">
-            <option value="user1">Aarav Sharma</option>
-            <option value="user2">Neha Verma</option>
-            <option value="user3">Rohit Patel</option>
-            <option value="user4">Kavya Iyer</option>
-          </select>
+          <select class="load-select js-account-select"></select>
 
-          <!-- Time filter dropdown -->
-          <select class="load-select">
+          <select class="load-select js-time-select">
             <option value="today" selected>Today</option>
             <option value="yesterday">Yesterday</option>
             <option value="last-week">Last week</option>
@@ -204,17 +200,13 @@
         </div>
 
         <div class="load-actions">
-          <button class="load-btn">Load files</button>
-          <button class="generate-btn" disabled>Generate</button>
+          <button class="load-btn js-load-btn">Load recordings</button>
         </div>
       </div>
-
-
+      <div class="loaded-files-container"></div>
     </div>
 
-    <p class="note submit-file-message js-submit-file-message">
-      (Note: After submitting please wait for the response. Do not refresh)
-    </p>
+   
     <div class="speed-buttons-container">
       <button class="audio-speed-button js-audio-speed-button" data-speed="0.25">4x slower</button>
       <button class="audio-speed-button js-audio-speed-button" data-speed="0.125">8x slower</button>
