activated the generate button and removed the recorder in annotation page

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 </section>
 
   <section class="annotate-section">
-    <div class="recorder-container">
+    <div class="recorder-container-1">
 
   <!-- AUDIO -->
   <div class="panel">
