--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Shunya</title>
   <link rel="stylesheet" href="/styles/gridtimeline.css">
   <link rel="stylesheet" href="/styles/recorder.css">
   <link rel="stylesheet" href="/styles/dragLetters.css">
