changed status to new, increaded drop region height

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <button class="submit-video-button-1 js-submit-video-button-1">Submit</button>
     </div>
     <!-- FILE UPLOAD -->
-    <div class="panel-1">
+    <div class="panel-1 file-uploader">
       <h4>Upload WAV Files</h4>
 
       <div id="dropZone" class="drop-zone">
