added only allowed letter note

--- a/index.html
+++ b/index.html
@@ -230,6 +230,13 @@
           <button class="load-btn js-load-btn">Load recordings</button>
         </div>
       </div>
+      <div class="allowed-akshars-container">
+        <span>
+          "अ", "आ", "इ", "उ", "ए", "ओ", "क", "ख", "ग", "घ", "च", "छ", "ज", "झ", "ट", "ठ", "ड", "ढ", "त", "थ", "द", "ध", "प", "फ", "ब", "भ", "न", "म", "य", "र", "ल", "व", "स", "ह", "०"
+        </span>
+        <br>
+        <span>(NOTE: Only these akshars/letters are allowed, Do not type other akshars/letters.)</span>
+      </div>
       <div class="submit-data-response js-submit-data-response"></div>
       <div class="loaded-files-container"></div>
     </div>
