--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/styles/loginPage.css">
   <link rel="stylesheet" href="/styles/account.css">
   <link rel="stylesheet" href="/styles/loadFiles.css">
+  <link rel="stylesheet" href="/styles/createAksharEditor.css">
 </head>
 <body>
   <section class="login-page">
