--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
   </section>
   
-
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script src="/scripts/main.js" type="module"></script>
   <script src="/scripts/renderAkshars.js" type="module"></script>
   <script src="/scripts/renderBoothGrids.js" type="module"></script>
