added pagination to download files

--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@
 
     <!-- FILES LIST -->
     <div class="files-list-container"></div>
+    <div class="pagination-bar"></div>
+
 
     <!-- TEMPLATE (MUST BE OUTSIDE) -->
     <script type="text/template" id="fileRowTemplate">
